--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -33,19 +33,24 @@ steps:
 
 - task: UseDotNet@2
   condition: not(${{ parameters.usePipelineArtifact }})
-  displayName: Install .NET 7.0.x SDK
+  displayName: Install .NET 8.x SDK
   inputs:
     packageType: sdk
-    version: 7.0.x
-    performMultiLevelLookup: true
+    version: 8.x
 
 - task: UseDotNet@2
   condition: not(${{ parameters.usePipelineArtifact }})
-  displayName: Install .NET 6.0.x runtime
+  displayName: Install .NET 7.x runtime
   inputs:
     packageType: runtime
-    version: 6.0.x
-    performMultiLevelLookup: true
+    version: 7.x
+
+- task: UseDotNet@2
+  condition: not(${{ parameters.usePipelineArtifact }})
+  displayName: Install .NET 6.x runtime
+  inputs:
+    packageType: runtime
+    version: 6.x
 
 - task: UseNode@1
   inputs:
